WIP - Adding native ES6

--- a/bedrock/firefox/templates/firefox/firstrun/firstrun.html
+++ b/bedrock/firefox/templates/firefox/firstrun/firstrun.html
@@ -96,5 +96,5 @@
 {% endblock %}
 
 {% block js %}
-  {% javascript 'firefox_firstrun' %}
+  <script src="{{ static('js/firefox/firstrun/firstrun-es6.js') }}"></script>
 {% endblock %}
